Add furin AI link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		flex-direction: column;
 		margin:30px 3%;
 		padding: 0 0 2rem 2rem;
-		opacity:0.9
+		opacity:0.9;
 		float:left;
 	}
 	
@@ -131,6 +131,12 @@
 <body>
 	
 	<header><h1>portfolio<br>— Ville Kemppainen</h1></header>
+
+	<div>
+		<a href="https://local-llm-chat-7w13s3pg6-ville-kemppainens-projects.vercel.app/">風鈴 AI</a>
+		<p>My digital AI twin!</p>
+		<p>2025; Python, NextJS</p>
+	</div>
 
 	<div>
 		<a href="http://en.ilmatieteenlaitos.fi/download-observations">FMI weather observation GUI</a>
