--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 	<header><h1>portfolio<br>— Ville Kemppainen</h1></header>
 
 	<div>
-		<a href="https://local-llm-chat-7w13s3pg6-ville-kemppainens-projects.vercel.app/">風鈴 AI</a>
+		<a href="https://local-llm-chat-sigma.vercel.app">風鈴 AI</a>
 		<p>My digital AI twin!</p>
 		<p>2025; Python, NextJS</p>
 	</div>
